[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "hkvwaporpy"
author = "Mattijn van Hoek"
author-email = "hoek@hkv.nl"
home-page = "https://github.com/HKV-products-services/hkvwaporpy"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

